--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ var map = new mapboxgl.Map({
 map.on('load', function() {
   // the rest of the code will go in here
     var layers = ['0-10', '10-20', '20-50', '50-100', '100-200', '200-500', '500-1000', '1000+'];
-    var colors = ['#FFEDA0', '#FED976', '#FEB24C', '#FD8D3C', '#FC4E2A', '#E31A1C', '#BD0026', '#800026'];
+    var colors = ['#FFEDA0', '#cfecd9', '#a0dab3', '#40b7c4', '#3195a0', '#253393'];
 
     for (i = 0; i < layers.length; i++) {
       var layer = layers[i];
